# Robotics

./: Niet verwijderen Nick pls.txt  Oke jonge
Beweging/: CMakeCache.txt  CMakeLists.txt  Makefile  Motor  Motor.cpp  Motor.h  cmake_install.cmake  motor
Beweging/wiringPi/: cmake_install.cmake
Movement/: CMakeCache.txt  CMakeLists.txt  Makefile  Movement  Movement.cpp  Movement.h  Movement2.h  ServoClass.cpp  ServoClass.h  Test  Test.cpp  cmake_install.cmake  movement
Movement/wiringPi/: Makefile
ServoMotor/MyDynamixel/: BTclient.cpp  BTclient.h  CMakeCache.txt  CMakeLists.txt  Makefile  ServoClass.cpp  ServoClass.h  Test  cmake_install.cmake  demo.txt  main.cpp  main.h  output.txt
ServoMotor/MyDynamixel/Movement/: Movement.cpp  Movement.h  timercpp.h
ServoMotor/MyDynamixel/arm/: arm.cpp  arm.h
ServoMotor/MyDynamixel/bluez-5.58/: Makefile  Makefile.in  config.h  config.status  configure  libtool
ServoMotor/MyDynamixel/bluez-5.58/client/: bluetoothctl
ServoMotor/MyDynamixel/bluez-5.58/ell/: base64.lo  cert-crypto.lo  cert.c  cert.lo  checksum.lo  cipher.lo  dbus-client.lo  dbus-filter.c  dbus-filter.lo  dbus-message.lo  dbus-name-cache.lo  dbus-service.c  dbus-service.lo  dbus-util.lo  dbus.lo  ell.h  gvariant-util.lo  hashmap.lo  idle.lo  io.lo  key.lo  libell-internal.la  log.lo  main.lo  pem.lo  queue.c  queue.lo  random.lo  settings.c  settings.lo  signal.lo  siphash.lo  string.lo  strv.lo  timeout.c  timeout.lo  useful.h  utf8.lo  util.h  util.lo  (+1 more)
ServoMotor/MyDynamixel/bluez-5.58/emulator/: b1ee  btvirt  hfp
ServoMotor/MyDynamixel/bluez-5.58/lib/: bluez.pc
ServoMotor/MyDynamixel/bluez-5.58/mesh/: bluetooth-mesh.service  bluetooth-meshd
ServoMotor/MyDynamixel/gewichtsensor/: gewichtsensor.cpp  gewichtsensor.h
ServoMotor/MyDynamixel/wiringPi/: Makefile  cmake_install.cmake  wiringSerial.c
(+446 files in other folders)
